--- a/assets/css/layout/_componentes.scss
+++ b/assets/css/layout/_componentes.scss
@@ -37,3 +37,106 @@ button.botao-grande {
 		padding: .4em 1.2em;
 	}
 }
+
+
+/****************************************
+ * CONTAINER QUE ENVOLVE MATERIAL *
+ ****************************************/
+.container {
+	width: 100%;
+    max-width: $container;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px;
+    position: relative;
+
+    @media (max-width: $container) {
+        max-width: 100%;
+    }
+}
+
+
+/****************************************
+ * FORMATACAO DE TEXTO *
+ ****************************************/
+a { color: darken($verde,8%); }
+
+hr {
+	width: 100%;
+	background: $verde-clarim;
+	height: 4px; border-radius: 100px;
+	margin: 4em 0;
+	padding: 0;
+	border:0; display: block;
+}
+
+
+/****************************************
+ * NOTA *
+ ****************************************/
+button.nota {
+	@include appearance(none);
+	padding: 0; border: none;
+	width: 24px; height: 24px; line-height: 24px;
+	background: $laranja; color: $amarelo-claro;
+	text-align: center; display: inline-block;
+	vertical-align: middle; border: 0;
+	border-radius: 50%; font-weight: bold;
+	cursor: pointer;
+	@include transition(transform 0.1s ease-in-out, background 0.1s ease-in-out);
+
+	&:before { content: '?'; display: inline-block; }
+
+	&:hover, &:focus {
+		background: $azul;
+		@include transform(scale(1.1));
+	}
+}
+
+.modalOverlay {
+	width:100%; height:100%;
+	z-index:10;
+	background-color: black; opacity:0.7;
+	position:fixed;
+	top:0; left:0;
+	display:none; 
+	margin:0; padding:0;	
+}
+
+.modal {
+	width: 500px;
+	max-width: 98%;
+	max-height: 98vh;
+	margin: 0 auto;
+	overflow-y: auto;
+	padding: 1.5em;
+	border: 0; background-color: white;
+	z-index: 11; box-shadow: 0 0 20px transparentize(black,0.6);
+	position:fixed; top: 50%; left:50%;
+	@include transform(translate(-50%,-50%));
+	display:none;
+
+	div[role="document"] {
+		position: relative;
+		font-size: .9em;
+		
+		h2 { margin: 0; }
+		p {margin-bottom: 0;}
+		h2 + p { margin-top: 0 }
+
+		button {
+			font-size: 40px; color: $cinza-texto;
+			position: absolute;	right: -22px; top: -22px;
+			width: 27px; height: 27px; line-height: 27px;
+			text-align: center; padding: 0; background: none;
+			border: none;
+
+			span { width: 27px; height: 27px; line-height: 27px; overflow: hidden; }
+		}
+	}
+}
+
+#explicaNota {
+	position: absolute; width: 0; height: 0; visibility: hidden; overflow: hidden; opacity: 0;
+}
+
