--- a/assets/css/padroes/_mixins.scss
+++ b/assets/css/padroes/_mixins.scss
@@ -10,14 +10,16 @@
     top: 0; left: 0; display: block;
 }
 
-@mixin expandefundo() {
+@mixin expandefundo($cor) {
     position: relative;
+    background: $cor;
 
     & > * { position: relative; }
 
     &:before { content: ""; 
         width: 105vw; height: 100%; position: absolute;
         top: 0; left: 50%; display: block;
+        background: $cor;
         @include transform(translateX(-50%));
     }
 }
