--- a/assets/css/padroes/_padrao.scss
+++ b/assets/css/padroes/_padrao.scss
@@ -29,3 +29,4 @@ $sidebar: 300px;
 @import "../padroes/normalize";
 @import "../padroes/fontface";
 @import "../padroes/mixins";
+@import "../padroes/loader";
