--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,8 +21,130 @@ body {
 
 #portal {
 	width: 100%; height: 100vh;
+	min-height: 500px;
 	@include display(flex);
 	@include flex-direction(column);
 	@include justify-content(center);
 	@include align-items(center);
-}   
+	position: relative;
+	text-decoration: none;
+	background: url('../media/blob_bg2.svg') no-repeat right bottom / 45% auto;
+
+	a.ficha {
+		position: absolute; bottom: 60px; left: 50%;
+		display: block; font-size: 1.45em; text-transform: lowercase;
+		font-weight: bold; text-decoration: none;
+		color: $azul; text-align: center;
+		@include transform(translateX(-50%));
+		@include transition(color 0.2s ease-in-out);
+
+		&:after { 
+			content: '\232a'; color: $laranja; 
+			font-size: 2em; @include transform(rotate(90deg));
+			line-height: 1.25;
+		    display: block; height: 41px;
+		    width: 18px; left: 50%; bottom: -26px;
+		    font-size: 40px; position: absolute; margin-left: -8px;
+		    @include transition(bottom 0.2s ease-in-out);
+		}
+
+		&:hover,&:focus {
+			color: $verde;
+			&:after { bottom: -30px; }
+		}
+	}
+} 
+
+#ficha {
+	min-height: 100vh;
+	background: white;
+	padding-bottom: 3em;
+	
+
+	header {
+		background: $verde-clarim;
+		text-align: center;
+		font-size: .8em;
+		padding: 2em 10px;
+	}
+
+	.container {
+		@include flex(space-between);
+		margin-top: 1em;
+
+		h3 { color: $azul; text-transform: uppercase; }
+
+		dl {
+			margin-bottom: 3em; 
+			width: 48%;
+
+			dt {
+				font-weight: bold; margin-top: 1.5em;
+				text-transform: uppercase;
+			}
+
+			dd { margin: 0; }
+
+			@media (max-width: $smart-maior) {
+				width: 100%;
+			}
+		}
+
+		.catalografica {
+			width: 100%;
+			max-width: 800px;
+			font-size: 0.8em;
+			border: 1px solid $laranja;
+			margin: 2em auto 0; 
+
+			img {
+				width: 100%; height: auto;
+			}
+
+			p { margin: 0 0 20px; }
+
+			.titulo {
+				position: relative; 
+				width: 100%; 
+				font-size: 1.1em; 
+				border-bottom: 1px solid; 
+				padding: 10px 25px;
+				background: $laranja;
+				color: white;
+				font-weight: bold;
+				text-align: center;
+			}
+
+			.codigo {
+				position: relative; 
+				width: 10%; 
+				float: left; 
+				padding: 25px 0px 25px 25px;
+				font-size: 1.1em;
+			}
+			
+			.dados {
+				position: relative; 
+				width: 88%; 
+				float: right; 
+				text-align: left; 
+				padding: 25px 25px 25px 0;
+				.cdu {
+					text-align: right;
+				}
+			}
+
+			&:after{
+				content: '';
+				display: table;
+				clear: both;
+			}
+
+			& + .biblio-responsavel{
+				text-align: center;
+				margin-top: 0.5em;
+			}
+		}
+
+	}
+}
