pagina interna de apresentacao

--- a/assets/css/padroes/_padrao.scss
+++ b/assets/css/padroes/_padrao.scss
@@ -8,6 +8,7 @@ $verde-musgo:   #748268;
 $laranja-claro: #FCD2B1;
 $laranja:       #EA9671;
 $amarelo-claro: #FFFBF3;
+$vermelho: 		#E88272;
 $cinza-texto:   #757575;
 
 
