--- a/assets/css/layout/_componentes.scss
+++ b/assets/css/layout/_componentes.scss
@@ -7,10 +7,11 @@ h1.marca {
 	background-image: url('../media/bolinha_pattern.svg');
 	background-position: center bottom;
 	background-repeat: space no-repeat;
-	background-size: 24px; padding-bottom: 30px;
+	background-size: 18px; padding-bottom: 30px;
+	font-size: 1.3em;
 
-	.n01 { font-style: italic; display: block; font-size: 1.12em; padding: 0 5px; }
-	.n02 { font-size: .8em; padding: 0 5px; }
+	.n01 { font-style: italic; font-size: 1em;  }
+	.n02 { font-size: 1em; }
 }
 
 
@@ -18,7 +19,7 @@ h1.marca {
 /****************************************
  * BOTAO *
  ****************************************/
-button.botao-grande {
+a.botao, button.botao {
 	@include appearance(none);
 	border: 0; background: $laranja;
 	@extend %bordaredonda-maior;
@@ -27,16 +28,22 @@ button.botao-grande {
 	text-transform: lowercase;
 	color: $amarelo-claro;
 	line-height: 1;
-	font-size: 1.6em;
+	font-size: 1em;
 	padding: .4em 1em;
 	cursor: pointer;
+	text-decoration: none;
+	white-space: nowrap;
 	@include transition(background 0.2s ease-in-out, padding 0.2s ease-in-out);
 
 	&:hover, &:focus {
 		background: $verde;
 		padding: .4em 1.2em;
 	}
+
+	&.grande { font-size: 1.6em; }
+
 }
+
 
 
 /****************************************
@@ -57,6 +64,23 @@ button.botao-grande {
 
 
 /****************************************
+ * CABECALHO *
+ ****************************************/
+#cabecalho {
+	width: 100%;
+	@include display(flex);
+	@include align-items(flex-end);
+	@include justify-content(space-between);
+
+	h1 { margin-bottom: 0; @include order(2); }
+	a.voltar { @include order(1); }
+
+	margin-bottom: 3em;
+}
+
+
+
+/****************************************
  * FORMATACAO DE TEXTO *
  ****************************************/
 a { color: darken($verde,8%); }
@@ -69,6 +93,8 @@ hr {
 	padding: 0;
 	border:0; display: block;
 }
+
+p { margin-top: 0;  }
 
 
 /****************************************
