--- a/assets/css/layout/_apresentacao.scss
+++ b/assets/css/layout/_apresentacao.scss
@@ -26,23 +26,24 @@
 	.criterios {
 		padding-top: 3em;
 		text-align: center;
+		@include flex(center);
 
-		h2 { text-transform: uppercase; margin-bottom: 3rem}
+		h2 { text-transform: uppercase; width: 100%; margin-bottom: 3rem}
 
 		.inclusao, .exclusao {
-			padding: 1em;
+			padding: .5em 1em;
 			position: relative;
 
 			h3 { margin-bottom: 0; }
 		}
 
 		.inclusao {
-			background: $verde-clarim;
+			background: $verde-clarim; width: 50%; padding-left: 0;
 			h3 { color: $verde; font-size: 1.8em; }
 		}
 
 		.exclusao {
-			background: #FFEEE9;
+			background: #FFEEE9; width: 50%;  padding-right: 0;
 			h3 { color: $vermelho; font-size: 1.8em; }
 		}
 	}
