--- a/assets/css/layout/_apresentacao.scss
+++ b/assets/css/layout/_apresentacao.scss
@@ -24,11 +24,11 @@
 	}
 
 	.criterios {
-		padding-top: 3em;
+		padding-top: 1em;
 		text-align: center;
 		@include flex(center);
 
-		h2 { text-transform: uppercase; width: 100%; margin-bottom: 3rem}
+		h2 { text-transform: uppercase; width: 100%; margin-bottom: 1rem}
 
 		.inclusao, .exclusao {
 			padding: .5em 1em;
@@ -39,11 +39,35 @@
 
 		.inclusao {
 			background: $verde-clarim; width: 50%; padding-left: 0;
+			
+			&:before, &:after { content: ''; position: absolute; top: 0; }
+
+			&:before { 
+				background: $verde-clarim; display: block;
+				width: 50vw; height: 100%; left: 0;
+				@include transform(translateX(-100%)); 
+			}
+
+			&:after {
+				width: 0; height: 0;
+				border-left: 50px solid transparent;
+				border-right: 50px solid transparent;
+				border-top: 50px solid $amarelo-claro;
+				right: -50px; z-index: 1;
+			}
+
 			h3 { color: $verde; font-size: 1.8em; }
 		}
 
 		.exclusao {
 			background: #FFEEE9; width: 50%;  padding-right: 0;
+
+			&:before { 
+				content: ''; background: #FFEEE9; display: block;
+				width: 50vw; height: 100%; position: absolute; right: 0;
+				@include transform(translateX(100%)); top: 0;
+			}
+
 			h3 { color: $vermelho; font-size: 1.8em; }
 		}
 	}
