--- a/assets/css/layout/_apresentacao.scss
+++ b/assets/css/layout/_apresentacao.scss
@@ -72,4 +72,78 @@
 		}
 	}
 
+
+	.processos {
+		padding-top: 3em;
+		padding-bottom: 3em;
+		position: relative;
+		background: white;
+		@include expandefundo(white);
+		@include flex(space-between);
+		border-bottom: 40px solid $amarelo-claro;
+
+		& > div { width: 49%; z-index: 1;}
+
+		ol {
+			width: 100%; counter-reset: section;
+			list-style-type: none; padding-left: 40px;
+
+			li {
+				position: relative; 
+				margin: 15px 0 0 0; padding-left: 0; text-align: left;
+
+				&:first-child {margin-top: 0}
+
+				&:before {
+					display: block;
+					position: absolute;
+					top: 0; left: -40px;
+					color: white;
+					background: $laranja;
+					width: 26px; height: 26px;
+					line-height: 25px;
+					font-weight: bold;
+				    margin-right: 5px;
+					text-align: center; 
+					border-radius: 50%;
+					white-space: nowrap;
+					font-size: 1em; line-height: 1.7rem;
+					counter-increment: section;
+					content: counter(section); 
+				}
+
+				div {
+					color: $azul;
+
+					strong { 
+						color: white; background: $azul; padding: .15em .35em; vertical-align: middle;
+						@extend %textshadow; letter-spacing: 0.05em;
+					}
+				}
+			}
+		}
+
+
+		.aviso {
+			background: $amarelo-claro;
+			padding: 1.5em 0 1.5em 1.5em;
+			position: relative; margin-bottom: 2em;
+
+			&:before { 
+				content: ''; background: $amarelo-claro; display: block;
+				width: 50vw; height: 100%; position: absolute; right: 0;
+				@include transform(translateX(100%)); top: 0;
+			}
+		}
+
+
+		button.botao { margin-top: 5rem; }
+
+	}
+}
+
+.grafismo {
+	width: 45vw; height: auto; right: 0;
+	position: absolute; bottom: 0;
+	img { vertical-align: bottom; }
 }
