--- a/assets/css/layout/_formulario.scss
+++ b/assets/css/layout/_formulario.scss
@@ -80,7 +80,7 @@ progress {
 	    content: '';
 	    position: absolute;
 	    left: 0;
-	    top: 0;
+	    top: 2px;
 	    width: 18px;
 	    height: 18px;
 	    border: 1px solid $laranja-claro;
@@ -95,7 +95,7 @@ progress {
 	    height: 12px;
 	    background: $laranja;
 	    position: absolute;
-	    top: 4px;
+	    top: 6px;
 	    left: 4px;
 	    -webkit-transition: all 0.2s ease;
 	    transition: all 0.2s ease;
@@ -123,7 +123,7 @@ progress {
 		border: 0; outline: 0;
 		@include flex(space-between);
 
-		label { margin: 0 0 2em; }
+		label { margin: 0 0 2em; width: 100%; }
 		p { margin-bottom: 0; font-style: italic; line-height: 1.4; }
 
 		&.col-2 > label { width: 48%; }
