--- a/assets/css/layout/_formulario.scss
+++ b/assets/css/layout/_formulario.scss
@@ -1,45 +1,74 @@
 // body pagia de form
 .area-form {
-	@include display(flex);
-	@include flex-direction(column);
-	@include justify-content(space-between);
-	@include align-items(center);
+	// @include display(flex);
+	// @include flex-direction(column);
+	// @include justify-content(space-between);
+	// @include align-items(center);
 	min-height: 100vh;
 }
 
 // barra de progresso
-progress {
-	@include appearance(none);
-	margin: 0; padding: 0;
-	width: 100vw; height: 12px;
-	background: $laranja-claro;
-	left: 50%; position: absolute;
-	bottom: 0;
-	@include transform(translateX(-50%));
 
-	&::-webkit-progress-bar { background-color: transparent; }
-	&::-webkit-progress-value { background-color: $laranja; }
-	&::-moz-progress-bar { background-color: $laranja; }	
+#progresso-preenchimento{
+	position: fixed;
+	left: 0; bottom: 0;
+	width: 100%;
+	height: 12px;
+	background: $laranja-claro;
+	.progresso{
+		background-color: $laranja;
+		height: 100%;
+		transition: width 0.3s ease-in-out;
+	}
+	progress{
+		width: 1px;
+		height: 1px;
+		opacity: .01;
+	}
 }
 
 // formulario
 #formulario {
-	width: 100vw;
-	max-width: 800px;
-	margin: 0 auto;
-	@include flex-grow(1);
-	@include display(flex);
-	@include flex-direction(column);
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	min-height: 100%;
+	padding: 100px 0;
+	display: none;
 	@include justify-content(center);
 	@include align-items(center);	
+	@include flex-direction(column);
+	&.visivel{
+		@include display(flex);
+	}
 
 	h1 { color: $verde; font-size: 2.4em; width: 100%; line-height: 1; margin-bottom: 10px;}
 	h2 { color: $azul; font-size: 2em; width: 100%; margin-bottom: 10px;}
 	h3,h2.vetor { color: $azul; font-size: 1em; width: 100%; text-transform: uppercase; margin-bottom: 10px; }
 
+	textarea{
+		font-size: .9em;
+		padding: 1.5em;
+		line-height: 1.4;
+	}
+
+
 	section {
-		width: 100%;
-		padding-bottom: 4em;
+		width: 800px;
+		display: none;
+		animation: none 0.6s ease-out 0s 1 normal both;
+		animation-name: sobe, tornarVisivel;
+		
+		&.visivel{
+			display: block;
+		}
+	}
+
+	#inscricao-instituicao{
+		nav{
+			justify-content: flex-end;
+		}
 	}
 
 	input[type="text"], textarea {
@@ -52,6 +81,10 @@ progress {
 		&:focus {
 			outline-color: $laranja;
 		}
+	}
+
+	textarea{
+		resize: vertical;
 	}
 
 	// custom radio button
@@ -123,7 +156,11 @@ progress {
 		border: 0; outline: 0;
 		@include flex(space-between);
 
-		label { margin: 0 0 2em; width: 100%; }
+		label { 
+			margin: 0;
+			margin-bottom: 2em;
+			width: 100%; 
+		}
 		p { margin-bottom: 0; font-style: italic; line-height: 1.4; }
 
 		&.col-2 > label { width: 48%; }
@@ -131,21 +168,66 @@ progress {
 
 		&.participantes {
 			margin-bottom: 2em;
+			
+		}
+	}
 
-			label { margin-bottom: 0; }
-			button {
-				color: $verde;
-				text-align: right;
+	ul.participantes{
+		list-style: none;
+		padding-left: 0;
+		margin: 0;
+		li.grupo{
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: nowrap;
+			align-items: flex-end;
+			animation-name: tornarVisivel, paraEsquerda;
+			animation-duration: 0.3s;
+			animation-timing-function: ease-out;
+
+			counter-increment: liParticipantes;
+			&:not(:last-child){
+				margin-bottom: 2em;
+			}
+			&:only-child{
+				.removerParticipante{
+					pointer-events: none;
+					visibility: hidden;
+				}
+			}
+
+			label { 
+				margin-bottom: 0;
+				margin-right: 1em;
+			}
+			.removerParticipante{
+				flex-shrink: 0;
 				@include appearance(none);
-				background: none;
-				border: 0; font-weight: 500;
-				cursor: pointer;
-				margin-top: 10px;
-				display: block;
-
-				&:hover, &:focus {text-decoration: underline;}
+				padding: 0;
+				margin-bottom: .5em;
+				border: none;
+				color: white;
+				font-weight: bold;
+				line-height: 1;
+				width: 1.5em;
+				height: 1.5em;
+				border-radius: 50%;
+				background-color: $laranja;
 			}
 		}
+	}
+
+	.btAddParticipante {
+		color: $verde;
+		@include appearance(none);
+		background: none;
+		border: 0; font-weight: 500;
+		cursor: pointer;
+		margin-top: 10px;
+		margin-bottom: 4em;
+		display: block;
+
+		&:hover, &:focus {text-decoration: underline;}
 	}
 
 	fieldset.grupo {
@@ -153,16 +235,222 @@ progress {
 	}
 
 	nav {
-		font-size: 1.1em; font-weight: 500;
+		
 		@include flex(space-between);
-		color: $laranja; width: 100%;
+		
 
-		a {
-			color: inherit; text-decoration: none;
+		button {
+			font-size: 1.1em; 
+			font-weight: 500;
+			color: $laranja; width: 100%;
+			@include appearance(none);
+			padding: 0;
+			margin: 0;
+			border: none;
+			width: auto;
+			height: auto;
+			background-color: transparent;
+			font-family: inherit;
+			&:focus, &:hover { 
+				text-decoration: underline;
+			}
 
-			&:focus, &:hover { font-weight: bold; }
+			&[disabled]{
+				opacity: .3;
+				pointer-events: none;
+			}
+
+			&:hover{
+				cursor: pointer;
+			}
+
+			&#bt-resultado{
+				color: darken($verde,8%);
+			}
+
+
 		}
 
-		#status-participantes { text-align: center; font-style: italic; color: $vermelho;}
+		#status-participantes { 
+			text-align: center;
+			font-style: italic;
+			color: $vermelho;
+			margin-bottom: 0;
+		}
 	}
+}
+
+
+#resultado{
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	min-height: 100%;
+	padding: 100px 0;
+	display: none;
+	@include justify-content(center);
+	@include align-items(center);
+
+
+
+	@media screen{
+		.print{
+			display: none;
+		}
+	}
+
+	&.visivel{
+		@include display(flex);
+	}
+
+	%anim_resultado{
+		animation-name: tornarVisivel, sobe;
+		animation-duration: 0.3s;
+		animation-timing-function: ease-out;
+		animation-fill-mode: both;
+	}
+
+	.conteudo{
+		width: 100%;
+	}
+	
+	h1.titulo-resultado{
+		font-size: 2.4em;
+		text-transform: uppercase;
+		color: $laranja;
+		text-align: center;
+		@extend %anim_resultado;
+	}
+
+	
+
+	#resultado-roda{
+		display: block;
+		width: 100%;
+		font-size: 15px;
+		@extend %anim_resultado;
+		animation-delay: .3s;
+		.divisoesvetores path, .contorno, .fatia, .nfatia, .total .fundo{
+			stroke: #336F72;
+		}
+
+		.divisoesvetores path{
+			stroke-width: 3;
+		}
+
+		.contorno{
+			stroke-width: 4;
+			fill: transparent;
+		}
+
+		.nome-vetor{
+			font-size: .8em;
+		}
+
+		.nome-eixo{
+			font-weight: bold;
+			fill: #336F72;	
+			font-size: 1.2em;
+		}
+
+		.pontuacao{
+			font-weight: bold;
+			fill: $laranja;
+		}
+
+		.total{
+			.fundo{
+				stroke-width: 2;
+				fill: $amarelo-claro;
+			}
+
+			.numero{
+				font-weight: bold;
+				fill: $laranja;
+				font-size: 1.1em;
+			}
+		}
+
+		.vetor{
+			.fatia, .nfatia{
+				stroke: #336F72;
+				stroke-width: 1;
+			}
+
+			.nfatia{
+				opacity: 0;
+				fill: $amarelo-claro;
+				paint-order: stroke;
+				stroke-width: 3;
+			}
+
+			.fora{ fill: #54909A;}
+			.meio{ fill: #5EA1A8;}
+			.centro{ fill: #6CB6BA;}
+
+			&.ponto-1{
+				.meio, .fora{fill: transparent}
+				.ncentro{opacity: 1;}
+			}
+
+			&.ponto-2{
+				.fora{fill: transparent}
+				.nmeio{opacity: 1;}
+			}
+			&.ponto-3{
+				.nfora{opacity: 1;}
+			}
+		}
+	}
+
+	.box-salvar{
+		width: 800px;
+		margin-top: 2em;
+		margin-left: auto;
+		margin-right: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		@extend %anim_resultado;
+		animation-delay: .6s;
+
+		#salvar{
+			@include appearance(none);
+			border: none;
+			font-size: 2em;
+			color: white;
+			font-weight: bold;
+			background-color: $verde;
+			padding: .5em 1em;
+			border-radius: .5em;
+			&:hover{
+				cursor: pointer;
+				background-color: darken($verde,15%);
+			}
+		}
+
+		#revisar{
+			margin-top: 1em;
+			@include appearance(none);
+			padding: 0;
+			border: none;
+			background-color: transparent;
+			color: $laranja;
+			&:hover{
+				cursor: pointer;
+				text-decoration: underline;
+			}
+		}
+
+		.explicacao-salvar{
+			margin-top: 2em;
+		}
+	}
+
+	
+
+
+
 }
